added mask to play-ground for better gaming experience.

--- a/index.html
+++ b/index.html
@@ -25,20 +25,38 @@
     <div id="drag-source-1-6" class="dot red large" draggable="true" data-coin-size="large" data-coin-owner="1" data-coin-used="0"></div>
   </div>
   <div >
-    <div data-role="drag-drop-container">
-      <span class="play-ground top left" id="block1" ></span>
-      <span class="play-ground top center" id="block2"></span>
-      <span class="play-ground top right" id="block3"></span>
+    <div >
+      <span class="play-ground top left" id="block1" data-role="drag-drop-container">
+        <div class="mask"></div>
+      </span>
+      <span class="play-ground top center" id="block2" data-role="drag-drop-container">
+        <div class="mask"></div>
+      </span>
+      <span class="play-ground top right" id="block3" data-role="drag-drop-container">
+        <div class="mask"></div>
+      </span>
+    </divclass>
+    <div >
+      <span class="play-ground middle left" id="block4" data-role="drag-drop-container">
+        <div class="mask"></div>
+      </span>
+      <span class="play-ground middle center" id="block5" data-role="drag-drop-container">
+        <div class="mask"></div>
+      </span>
+      <span class="play-ground middle right" id="block6" data-role="drag-drop-container">
+        <div class="mask"></div>
+      </span>
     </div>
-    <div data-role="drag-drop-container">
-      <span class="play-ground middle left" id="block4"></span>
-      <span class="play-ground middle center" id="block5"></span>
-      <span class="play-ground middle right" id="block6"></span>
-    </div>
-    <div data-role="drag-drop-container">
-      <span class="play-ground bot left" id="block7"></span>
-      <span class="play-ground bot center" id="block8"></span>
-      <span class="play-ground bot right" id="block9"></span>
+    <div >
+      <span class="play-ground bot left" id="block7" data-role="drag-drop-container">
+        <div class="mask"></div>
+      </span>
+      <span class="play-ground bot center" id="block8" data-role="drag-drop-container">
+        <div class="mask"></div>
+      </span>
+      <span class="play-ground bot right" id="block9" data-role="drag-drop-container">
+        <div class="mask"></div>
+      </span>
     </div>
 
   </div>
