--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <h1>Tic Tac TOE</h1>
 
   <div><strong class="game-state">Player 1's turn</strong></div>
-  <div id="player-1-coin"  class="source-container coin-container">
+  <div id="player-1-coin"  class="source-container coin-container" style="border-bottom: 0px;">
     <div id="drag-source-1-1" class="dot red small" draggable="true" data-coin-size="small" data-coin-owner="1" data-coin-used="0"></div>
     <div id="drag-source-1-2" class="dot red medium" draggable="true" data-coin-size="medium" data-coin-owner="1" data-coin-used="0"></div>
     <div id="drag-source-1-3" class="dot red large" draggable="true" data-coin-size="large" data-coin-owner="1" data-coin-used="0"></div>
   </div>
-  <div id="player-1-coin"  class="source-container coin-container">
+  <div id="player-1-coin"  class="source-container coin-container" style="border-top: 0px;">
     <div id="drag-source-1-4" class="dot red small" draggable="true" data-coin-size="small" data-coin-owner="1" data-coin-used="0"></div>
     <div id="drag-source-1-5" class="dot red medium" draggable="true" data-coin-size="medium" data-coin-owner="1" data-coin-used="0"></div>
     <div id="drag-source-1-6" class="dot red large" draggable="true" data-coin-size="large" data-coin-owner="1" data-coin-used="0"></div>
@@ -60,12 +60,12 @@
     </div>
 
   </div>
-  <div id="player-2-coin" class="source-container coin-container" >
+  <div id="player-2-coin" class="source-container coin-container" style="border-bottom: 0px;">
     <div id="drag-source-2-1" class="dot green small" draggable="true" data-coin-size="small" data-coin-owner="2" data-coin-used="0"></div>
     <div id="drag-source-2-2" class="dot green medium" draggable="true" data-coin-size="medium" data-coin-owner="2" data-coin-used="0"></div>
     <div id="drag-source-2-3" class="dot green large" draggable="true" data-coin-size="large" data-coin-owner="2" data-coin-used="0"></div>
   </div>
-  <div id="player-2-coin" class="source-container coin-container" >
+  <div id="player-2-coin" class="source-container coin-container" style="border-top: 0px;">
     <div id="drag-source-2-4" class="dot green small" draggable="true" data-coin-size="small" data-coin-owner="2" data-coin-used="0"></div>
     <div id="drag-source-2-5" class="dot green medium" draggable="true" data-coin-size="medium" data-coin-owner="2" data-coin-used="0"></div>
     <div id="drag-source-2-6" class="dot green large" draggable="true" data-coin-size="large" data-coin-owner="2" data-coin-used="0"></div>
